--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,21 @@
-# Windows thumbnail cache files
-Thumbs.db
-ehthumbs.db
-ehthumbs_vista.db
+# See https://help.github.com/ignore-files/ for more about ignoring files.
 
-# Folder config file
-Desktop.ini
+# dependencies
+/node_modules
 
-# Recycle Bin used on file shares
-$RECYCLE.BIN/
+# testing
+/coverage
 
-# Windows Installer files
-*.cab
-*.msi
-*.msm
-*.msp
+# production
+/dist
 
-# Windows shortcuts
-*.lnk
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# =========================
-# Operating System Files
-# =========================
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
